add title based on date grouping

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <div x-data="transactionFilter">
                 <!-- Input Date Range -->
                 <div class="row g-3 mb-4">
+                    <h4 class="text-center">Riwayat berdasarkan tanggal</h4>
                     <div class="col-md-4">
                         <label for="startDate" class="form-label">Dari Tanggal</label>
                         <input type="date" id="startDate" class="form-control" x-model="startDate">
