add footer section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
         </div>
     </div>
 
+    <footer class="text-center mt-4 mb-2">
+        <p>Copyright &copy; 2025 Raehan. All rights reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
