add button remove all transactions

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                         </div>
                     </template>
                 </div>
+                <button class="btn btn-danger" @click="hapusSemuaTransaksi" :disabled="transactions.length === 0">Hapus semua transaksi?</button>
             </div>
         </div>
     </div>
