--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="chart-container text-center justify-content-center">
             <h2>Grafik Keuangan</h2>
             <canvas id="transactionChart"></canvas>
+            <p class="text-secondary text-center" style="font-size: 13px;">Klik salah satu untuk menyembunyikan bar</p>
         </div>
 
         <div class="main-content">
