add sorting by specific month

--- a/index.html
+++ b/index.html
@@ -93,6 +93,23 @@
                         <option value="bulanDesc">Bulan: Desember → Januari</option>
                     </select>
 
+                    <label for="bulan">Filter Bulan:</label>
+                        <select x-model="selectedMonth" id="bulan" class="form-select mb-3">
+                            <option value="">Semua Bulan</option>
+                            <option value="01">Januari</option>
+                            <option value="02">Februari</option>
+                            <option value="03">Maret</option>
+                            <option value="04">April</option>
+                            <option value="05">Mei</option>
+                            <option value="06">Juni</option>
+                            <option value="07">Juli</option>
+                            <option value="08">Agustus</option>
+                            <option value="09">September</option>
+                            <option value="10">Oktober</option>
+                            <option value="11">November</option>
+                            <option value="12">Desember</option>
+                        </select>
+
                     <!-- Tampilkan pesan jika tidak ada hasil setelah filter -->
                     <template x-if="filteredTransactions.length === 0">
                         <div class="empty-state">
